# CLI-Agent

./: README.md  graph.py  main.py  pyproject.toml  state.py
agent/: __init__.py  graph.py  llm.py  main.py  state.py
agent/nodes/: __init__.py  error_handler.py  executor.py  explainer.py  generator.py  hitl.py  risk.py  validator.py
nodes/: error_handler.py  executor.py  explainer.py  generator.py  hitl.py  risk.py  validator.py
