[project]
name = "cli-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "openai>=2.30.0",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
agent = "agent.main:app"
